name:                blog
version:             0.1.0.0
synopsis:            nurpax.github.io blog
homepage:            http://nurpax.github.com/blog
license:             AllRightsReserved
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable blog
  hs-source-dirs:    .
  main-is:           site.hs
  other-modules:     Diagrams.Bintris
  build-depends:     base >= 4.5 && < 5
                   , hakyll >= 4.2.0.0
                   , blaze-svg >= 0.3.6
                   , text
                   , pandoc
                   , pandoc-types
  ghc-options:      -threaded