name:                blog
version:             0.1.0.0
synopsis:            nurpax.github.io blog
homepage:            http://nurpax.github.com/blog
license:             AllRightsReserved
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable blog
  hs-source-dirs:    .
  main-is:           site.hs
  other-modules:     Diagrams.Bintris
                     Diagrams.Bintris.Gamescreen
                     Diagrams.Bintris.Titlescreen
                     Diagrams.Bintris.Util
  build-depends:     base >= 4.5 && < 5
                   , hakyll >= 4.12.2.0
                   , blaze-svg >= 0.3.6.1
                   , text
                   , pandoc
                   , pandoc-types
  ghc-options:      -threaded