cabal-version:       2.4
name:                blog
version:             0.1.0.0
synopsis:            nurpax.github.io blog
homepage:            http://nurpax.github.com/blog
license:             NONE
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
build-type:          Simple

executable blog
  hs-source-dirs:    .
  main-is:           site.hs
  other-modules:     Diagrams.Bintris
                     Diagrams.Bintris.Gamescreen
                     Diagrams.Bintris.Titlescreen
                     Diagrams.Bintris.Util
  build-depends:     base
                   , hakyll
                   , blaze-markup
                   , blaze-svg >= 0.3.7
                   , text
                   , pandoc
                   , pandoc-types
  ghc-options:      -threaded